--- a/m2/package.json
+++ b/m2/package.json
@@ -4,11 +4,14 @@
   "description": "This is a basic data selfie app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ."
   },
   "author": "Abby - (Abishek Bhagat)",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
